force-app/main/default/objects/C360_Capacity__c.object
<CustomObject>
    <fields>
        <fullName>Create_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>CreatedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Capacity</relationshipLabel>
        <relationshipName>Capacity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>LastModifiedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per year</fullName>
                </value>
                <value>
                    <fullName>Per month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_Product__c.SalesOrganization__c</field>
                <operation>contains</operation>
                <valueField>$Source.SalesOrganization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Capacity</relationshipLabel>
        <relationshipName>Capacity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalRequirementConvert__c</fullName>
        <formula>TotalRequirement__c / Unit_Conversion__r.DenominatorUOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Requirement Convert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRequirement__c</fullName>
        <label>Total Requirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Conversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Conversion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_UnitConversion__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Products__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_UnitConversion__c</referenceTo>
        <relationshipLabel>Capacity</relationshipLabel>
        <relationshipName>Capacity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <label>Capacity</label>
    <nameField>
        <displayFormat>cp-{00000}</displayFormat>
        <label>Capacity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckIsChangeProduct</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Products__c )</errorConditionFormula>
        <errorDisplayField>Products__c</errorDisplayField>
        <errorMessage>Cannot change value of Products</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckSalesOrg</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;1100&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;1100&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;1300&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;1300&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;1400&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;1400&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;1700&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;1700&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;2000&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;2000&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;9100&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;9100&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;9200&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;9200&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;9300&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;9300&quot;))
    ),
    AND(
        ISPICKVAL(SalesOrganization__c,&quot;9400&quot;),
        NOT(INCLUDES($User.SalesOrganization__c,&quot;9400&quot;))
    )
)</errorConditionFormula>
        <errorDisplayField>SalesOrganization__c</errorDisplayField>
        <errorMessage>Please recheck sales organization before saving.</errorMessage>
    </validationRules>
</CustomObject>